fix(silence): Drive

--- a/kubernetes/main/apps/monitoring/silence-operator/silences/cephnodediskspacewarning.yaml
+++ b/kubernetes/main/apps/monitoring/silence-operator/silences/cephnodediskspacewarning.yaml
@@ -22,5 +22,5 @@ spec:
       value: CephNodeDiskspaceWarning
       isRegex: false
     - name: device
-      value: /dev/xvda6
+      value: /dev/sda6
       isRegex: false
