--- a/kubernetes/main/apps/selfhosted/ocis/app/helmrelease.yaml
+++ b/kubernetes/main/apps/selfhosted/ocis/app/helmrelease.yaml
@@ -97,6 +97,10 @@ spec:
     ingress:
       app:
         className: "internal-nginx"
+        annotations:
+          hajimari.io/enable: "true"
+          hajimari.io/instance: "todd"
+          hajimari.io/icon: "mdi:plex"
         hosts:
           - host: &hostName files.greyrock.casa
             paths:
