--- a/kubernetes/main/apps/network/kustomization.yaml
+++ b/kubernetes/main/apps/network/kustomization.yaml
@@ -11,5 +11,6 @@ resources:
   - ./external-dns/ks.yaml
   - ./ingress-nginx/ks.yaml
   - ./multus/ks.yaml
+  - ./smtp-relay/ks.yaml
   # Standard Resources
   - ./external-services
