fix(smtp-relay): Secret creds

--- a/kubernetes/main/apps/network/smtp-relay/app/externalsecret.yaml
+++ b/kubernetes/main/apps/network/smtp-relay/app/externalsecret.yaml
@@ -16,8 +16,8 @@ spec:
       data:
         SMTP_RELAY_HOSTNAME: "{{ .smtp_relay_hostname }}"
         SMTP_RELAY_SERVER: "{{ .smtp_relay_server }}"
-        SMTP_RELAY_USERNAME: "{{ .smtp_relay_username }}"
-        SMTP_RELAY_PASSWORD: "{{ .smtp_relay_password }}"
+        SMTP_RELAY_USERNAME: "{{ .smtp_relay_smtp_username }}"
+        SMTP_RELAY_PASSWORD: "{{ .smtp_relay_smtp_password }}"
   dataFrom:
     - extract:
         key: smtp-relay
