fix(grafana): Fix BLOCKY replacement

--- a/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/monitoring/grafana/app/helmrelease.yaml
@@ -101,8 +101,8 @@ spec:
           datasource:
             - name: "DS_PROMETHEUS"
               value: Prometheus
-            # - name: "VAR_BLOCKY_URL"
-            #   value: 'http:\\/\\/10.1.1.11:4000'
+            - name: "VAR_BLOCKY_URL"
+              value: 'http:\/\/10.1.1.11:4000'
 
         cert-manager:
           url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
