--- a/kubernetes/main/apps/system/node-feature-discovery/app/helmrelease.yaml
+++ b/kubernetes/main/apps/system/node-feature-discovery/app/helmrelease.yaml
@@ -37,6 +37,15 @@ spec:
             - pci
             - system
             - usb
+      tolerations:
+        - key: "node-role.kubernetes.io/master"
+          operator: "Equal"
+          value: ""
+          effect: "NoSchedule"
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Equal"
+          value: ""
+          effect: "NoSchedule"
       resources:
         requests:
           cpu: 5m
