--- a/kubernetes/main/bootstrap/talos/clusterconfig/.gitignore
+++ b/kubernetes/main/bootstrap/talos/clusterconfig/.gitignore
@@ -8,3 +8,9 @@ main-k8s07.greyrock.io.yaml
 main-k8s08.greyrock.io.yaml
 main-k8s09.greyrock.io.yaml
 talosconfig
+main-k8s4.greyrock.io.yaml
+main-k8s5.greyrock.io.yaml
+main-k8s6.greyrock.io.yaml
+main-k8s7.greyrock.io.yaml
+main-k8s8.greyrock.io.yaml
+main-k8s9.greyrock.io.yaml
